# xlh

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  compare.toml  config.toml  docker-compose.prod.yml  docker-compose.yml  optimize.toml  push.toml.example  regime_check.json
docs/superpowers/plans/: 2026-06-14-a-share-fund-backtest.md  2026-06-15-html-analysis-report.md  2026-06-15-multi-run-comparison.md  2026-06-18-parameter-optimization.md  2026-06-19-fund-code-search.md  2026-06-19-web-ui-compare-optimize.md  2026-06-19-web-ui-single-backtest.md  2026-06-20-incremental-data-sync.md  (+15 more)
promo/: COPY.md  README.md  package-lock.json  package.json
promo/src/: Promo.tsx  Root.tsx  theme.ts
scripts/: backup.sh  deploy.sh  verify_compare.py  verify_optimize.py  verify_report.py  verify_web.py
src/: analyze.rs  broker.rs  config.rs  engine.rs  event.rs  history.rs  holdings.rs  lib.rs  main.rs  metrics.rs  optimize.rs  portfolio.rs  recommend.rs  result.rs  runner.rs
src/data/: cache.rs  eastmoney.rs  fundlist.rs  mod.rs  sync.rs
src/push/: channels.rs  config.rs  job.rs  message.rs  mod.rs  schedule.rs  stock_advice.rs  store.rs
src/report/: chart.rs  compare.rs  html.rs  mod.rs  optimize.rs
src/stock/: attribution.rs  backtest.rs  diagnose.rs  evidence.rs  fee.rs  indicators.rs  mod.rs  recommend.rs  screen.rs  trade_stats.rs
src/strategy/: adaptive.rs  dca.rs  mod.rs  rsi.rs  rules.rs  smart_dca.rs  trend.rs
src/web/: mod.rs  page.rs  stock.rs
tests/: realtime_pipeline.rs  stock_smoke.rs
(+84 files in other folders)
